# skins-tauri

./: .editorconfig  .eslintrc  README.md  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/pages/: [...all].vue  index.vue
frontend/src/styles/: main.css
src/: auto-imports.d.ts  components.d.ts  stuff.ts
src-tauri/: Cargo.toml  items.json  tauri.conf.json
src-tauri/bindings/: ChestInfo.ts  FullAsset.ts  MarketItem.ts  MarketPrice.ts  PriceHistoryResponse.ts
src-tauri/src/: main.rs  requests.rs  state.rs  string_serializer.rs
src/components/: Chest.vue
src/pages/: [...all].vue  all_items.vue  index.vue  mock.ts
src/stores/: user.ts
src/styles/: main.css
