[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["shell-all"] }
reqwest = {version="0.11.18", features= ["cookies"] }
tokio = {version="1.28.2", features= ["macros", "rt-multi-thread"] }
anyhow = "1.0.71"
thiserror = "*"
itertools = "0.10.5"
serde-aux = "4.2.0"
urlencoding = "2.1.2"
futures = "0.3.28"
ts-rs = "6.2.1"
http-cache-reqwest = "0.10.0"
reqwest-middleware = "0.2.1"
directories = "5.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
